[package]
name = "rbx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
eframe = "0.34.1"
egui_extras = "0.34.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
native-dialog = "0.9.6"
postcard = { version = "1.1.3", features = ["alloc", "use-std"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
debug = false
split-debuginfo = "packed"
rpath = false
