[package]
name = "rbx"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
eframe =  "0.34.1"
egui_extras = "0.34.1"
image = { version = "0.25.10", default-features = false, features = ["png"] }
native-dialog = "0.9.6"
postcard = { version = "1.1.3", default-features = false, features = ["alloc", "default", "use-std"] }
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
stopwatch2 = "2.0.0"
zstd = { version = "0.13.3", features = ["thin-lto"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 2
debug = false
split-debuginfo = "packed"
rpath = false
